--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 		<dependency>
 		    <groupId>com.github.siertech</groupId>
 		    <artifactId>stapi</artifactId>
-		    <version>master-SNAPSHOT</version>
+		    <version>2.0</version>
 		</dependency>
 
 	</dependencies>
